--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://kendo.cdn.telerik.com/themes/5.8.0/bootstrap/bootstrap-main.css"></link>
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+  
 </head>
+
 <body>
-    <my-app>
-        <span class="k-icon k-i-loading" style="color: #ff6358"></span>
-    </my-app>
+  <div class="container-fluid">
+
+    <hr>
+
+
+
+    <hr>
+    <my-app></my-app>
+  </div>
 </body>
+
+</html>
