--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,10 @@
 <head>
-    <title>Kendo UI for Angular Example Application</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />    
-    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/themes/5.8.0/bootstrap/bootstrap-main.css"></link>
+  <title>Kendo UI for Angular Example Application</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    
-    <my-app>
-        <span class="k-icon k-i-loading" style="color: #ff6358"></span>
-    </my-app>
+  <my-app>
+    <span class="k-icon k-i-loading" style="color: #ff6358"></span>
+  </my-app>
 </body>
